# markzap

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  test-slides.md  test.md
resources/: AppIcon.icns  Info.plist
scripts/: bundle.sh  create-dmg.sh  generate-icon.sh
src/: app.rs  assets.rs  http.rs  main.rs  render.rs  search.rs  slidev.rs  state.rs
src/views/: presentation.rs
