[package]
name = "markzap"
version = "0.2.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["webview"] }
gpui-component-assets = "0.5.1"
comrak = "0.36"
anyhow = "1"
rust-embed = "8"
wry = { version = "0.53.3", package = "lb-wry" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
